Added more code

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <p><a href="https://r83qoc75rsr7i7qitv5lv7pm45p40kcjf9ugsc163o0b32r2j480.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+    <div>
+      <video src="./resources/videos/excursion_video.mp4" autoplay></video>
+    </div>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img href=""></p>
+    <p><img href=""></p>
+    <h2>Coming Soon for iPhone and Android</h2>
   </body>
 </html>
