--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     </div>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img href=""></p>
-    <p><img href=""></p>
+    <p><img src="./resources/images/excursion_camping.jpg"></p>
+    <p><img src="./resources/images/excursion_cellphone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="https://r83qoc75rsr7i7qitv5lv7pm45p40kcjf9ugsc163o0b32r2j480.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+    <p>&copy; Excursion</p>
   </body>
 </html>
